--- a/index.css
+++ b/index.css
@@ -14,7 +14,8 @@ body {
     margin: auto;
     border: 3px solid black;
     border-radius: 10px;
-    max-height:100%;
+    min-height: 100vh;
+    
 }
 
 
